# petstore-api

./: .gitignore  Dockerfile  README.md  go.sum  main.go  openapi-config.json  openapi-generate.sh
clients/python/: .gitlab-ci.yml  README.md  openapi-config.json  openapi-generate.sh  pyproject.toml  setup.py
clients/python/.github/workflows/: python.yml
clients/python/.openapi-generator/: FILES
clients/python/docs/: Address.md  ApiResponse.md  Category.md  Customer.md  Order.md  Pet.md  PetApi.md  StoreApi.md  Tag.md  User.md  UserApi.md
clients/python/petstore_client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
clients/python/petstore_client/api/: pet_api.py  store_api.py  user_api.py
clients/python/petstore_client/models/: __init__.py  address.py  api_response.py  category.py  customer.py  order.py  pet.py  tag.py  user.py
clients/python/test/: test_address.py  test_api_response.py  test_category.py  test_customer.py  test_order.py  test_pet.py  test_pet_api.py  test_store_api.py  test_tag.py  test_user.py  test_user_api.py
