[tool.poetry]
name = "petstore_client"
version = "1.0.0"
description = "Swagger Petstore - OpenAPI 3.0"
authors = ["apiteam@swagger.io"]
license = "Apache 2.0"
readme = "README.md"
repository = "https://github.com/GIT_REPO_ID/GIT_USER_ID"
keywords = ["OpenAPI", "OpenAPI-Generator", "Swagger Petstore - OpenAPI 3.0"]

[tool.poetry.dependencies]
python = "^3.8.1"

urllib3 = ">= 1.25.3"
python-dateutil = ">=2.8.2"
pydantic = ">= 1.10.5"
aenum = ">=3.1.11"

[tool.poetry.dev-dependencies]
pytest = ">=7.2.1"
tox = ">=4.4.6"
flake8 = ">=6.0.0"

[tool.poetry.group.dev.dependencies]
bpython = "^0.24"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
